# miscellaneous

./: README.md  getDependencyFromConda_flatpakVersion.py
Linux/: linuxToKupa
common/: common.py
file_system/: file_system.py
flatpak/: getDependencyFromConda_flatpakVersion.py
git/: main.py  repo_stats.py
nodejs/: install.sh
oldie/: configure-dev-linux mint.sh
programming/file_system/: README.md  file_system.hpp  file_system.py
programming/python/: setup_venv.ps1  setup_venv.sh  update_requirements.py
programming/python/common/: config.py
programming/rust/LiberosValut/: Cargo.toml
programming/rust/liberos_valut/: Cargo.toml
programming/rust/liberos_valut/src/: main.rs
themes/: test.md
zak/: docker-compose.yml  zak.conf
