[package]
name = "liberos_valut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
bytes = { version = "1" }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
pretty_env_logger = "0.5.0"
